# FacialRecognition

./: .gitignore  Pipfile  README.md  app.py  db.py  facial_detection.py  model.py  package-lock.json  package.json  pyproject.toml
src/facial_recognition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/scripts/: camera.js  login.js
static/style/: main.css  main.prod.css  style.css
templates/: base.html  flashes.html  index.html  login.html  protected.html  registration.html
